<resources>
    <string name="app_name">StockApplication</string>

    <string name="menu_search">Search</string>
    <string name="this_is_data">this is data</string>
    <string name="delete">Delete</string>
    <string name="stocks">Stocks</string>
    <string name="portfolio">Portfolio</string>
    <string name="favorites">Favorites</string>
    <string name="portfoliotext">PORTFOLIO</string>
    <string name="net_worth">Net Worth</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="dollar">$</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="change">change</string>
    <string name="changeprice">changeprice</string>
    <string name="favourites">FAVORITES</string>
    <string name="trade">TRADE</string>
    <string name="shares_owned">Shares Owned:</string>
    <string name="avg_cost_share">Avg. Cost / Share:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="changeport">Change:</string>
    <string name="market_value">Market Value:</string>
    <string name="stats">Stats</string>
    <string name="open_price">Open Price :</string>
    <string name="low_price">Low Price :</string>
    <string name="high_price">High Price :</string>
    <string name="prev_close">Prev. Close :</string>
    <string name="about">About</string>
    <string name="ipo_start_date">IPO Start Date</string>
    <string name="industry">Industry</string>
    <string name="webpage">Webpage</string>
    <string name="company_peers">Company Peers</string>
    <string name="social_sentiments">Social Sentiments</string>
    <string name="insights">Insights</string>
    <string name="_0_00">$0.00</string>
    <string name="msrp">MSRP</string>
    <string name="changeinsider">Change</string>
    <string name="total">Total</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="powered_by_finnhub"> <a href = "https://finnhub.io/" >Powered By Finnhub</a></string>
    <string name="_0">0</string>
    <string name="source_time">%1$s - %2$s</string>
    <string name="news">News</string>
    <string name="smallnewsimage">SmallnewsImage</string>
    <string name="largenewsimage">LargenewsImage</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="congratulations">Congratulations!</string>
    <string name="done">DONE</string>

</resources>

