<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/second"
        tools:context=".SecondActivity"
        android:background="@color/white">


        <ProgressBar
            android:id="@+id/progressBarsecond"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:elevation="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Company Info"
            app:titleTextColor="@android:color/black" />


        <TextView
            android:id="@+id/Ticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="60dp"
            android:text="@string/company_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <TextView
            android:id="@+id/CompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Ticker"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="80dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Ticker" />

        <TextView
            android:id="@+id/latestprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dollar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <TextView
            android:id="@+id/changeprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="75dp"
            android:text="@string/changeprice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latestprice" />

        <ImageView
            android:id="@+id/changeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/changeprice"
            app:layout_constraintEnd_toStartOf="@+id/changeprice"
            app:layout_constraintTop_toTopOf="@+id/changeprice" />

        <TextView
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/change"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latestprice" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:background="@color/white"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CompanyName"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextColor="@color/black" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/tabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CompanyName"
            app:tabGravity="fill" />






        <!--PORTFOLIO-->


        <Button
            android:id="@+id/tradebutton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="97dp"
            android:layout_height="46dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#1FEF42"
            android:text="@string/trade"
            android:textColor="@color/white"
            app:cornerRadius="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <TextView
            android:id="@+id/portfoliotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/portfolio"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

        <TextView
            android:id="@+id/sharesownedtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/shares_owned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portfoliotext" />

        <TextView
            android:id="@+id/avgcosttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/avg_cost_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sharesownedtext" />

        <TextView
            android:id="@+id/totalcosttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/total_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avgcosttext" />

        <TextView
            android:id="@+id/changetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/changeport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalcosttext" />

        <TextView
            android:id="@+id/marketvaluetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/market_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changetext" />

        <TextView
            android:id="@+id/sharesowndata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/_0"
            app:layout_constraintStart_toEndOf="@+id/sharesownedtext"
            app:layout_constraintTop_toBottomOf="@+id/portfoliotext" />

        <TextView
            android:id="@+id/avgcostdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/avgcosttext"
            app:layout_constraintTop_toBottomOf="@+id/sharesowndata" />

        <TextView
            android:id="@+id/totalcostdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="77dp"
            android:layout_marginTop="6dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/totalcosttext"
            app:layout_constraintTop_toBottomOf="@+id/avgcostdata" />


        <TextView
            android:id="@+id/changedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:layout_marginTop="6dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/changetext"
            app:layout_constraintTop_toBottomOf="@+id/totalcostdata" />

        <TextView
            android:id="@+id/marketvaluedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="6dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/marketvaluetext"
            app:layout_constraintTop_toBottomOf="@+id/changedata" />




        <!--STATS -->

        <TextView
            android:id="@+id/statstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/stats"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/marketvaluedata" />

        <TextView
            android:id="@+id/openpricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/open_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statstext" />

        <TextView
            android:id="@+id/lowpricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/low_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openpricetext" />

        <TextView
            android:id="@+id/highpricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="105dp"
            android:text="@string/high_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statstext" />

        <TextView
            android:id="@+id/prevclosetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="99dp"
            android:text="@string/prev_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highpricetext" />

        <TextView
            android:id="@+id/highpricedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/highpricetext"
            app:layout_constraintTop_toBottomOf="@+id/statstext" />

        <TextView
            android:id="@+id/prevclosedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/prevclosetext"
            app:layout_constraintTop_toBottomOf="@+id/highpricedata" />

        <TextView
            android:id="@+id/openpricedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/openpricetext"
            app:layout_constraintTop_toBottomOf="@+id/statstext" />

        <TextView
            android:id="@+id/lowpricedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/lowpricetext"
            app:layout_constraintTop_toBottomOf="@+id/openpricedata" />




        <!--ABOUT-->

        <TextView
            android:id="@+id/abouttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowpricetext" />

        <TextView
            android:id="@+id/ipotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/ipo_start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abouttext" />

        <TextView
            android:id="@+id/industrytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/industry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipotext" />

        <TextView
            android:id="@+id/webpagetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/webpage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/industrytext" />

        <TextView
            android:id="@+id/peerstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/company_peers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webpagetext" />

        <TextView
            android:id="@+id/ipodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/ipotext"
            app:layout_constraintTop_toBottomOf="@+id/abouttext" />

        <TextView
            android:id="@+id/industrydata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/industrytext"
            app:layout_constraintTop_toBottomOf="@+id/ipodata" />


        <TextView
            android:id="@+id/webpagedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="10dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textColorLink="#184CE6"
            app:layout_constraintStart_toEndOf="@+id/webpagetext"
            app:layout_constraintTop_toBottomOf="@+id/industrydata" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/peersRecyclerView"
            android:layout_width="200dp"
            android:layout_height="19dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/peerstext"
            app:layout_constraintTop_toBottomOf="@+id/webpagedata" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>