<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="50dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="300dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/TradeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputquantity"
            android:layout_width="220dp"
            android:layout_height="41dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:text="@string/_0"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TradeTextView" />

        <TextView
            android:id="@+id/sharestext"
            android:layout_width="47dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="45dp"
            android:text="Shares"
            app:layout_constraintStart_toEndOf="@+id/inputquantity"
            app:layout_constraintTop_toBottomOf="@+id/TradeTextView" />

        <TextView
            android:id="@+id/stockprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="90dp"
            android:text="0 * price/share = "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputquantity" />

        <TextView
            android:id="@+id/remainingamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Amount left in wallet to buy STOCK"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stockprice" />

        <Button
            android:id="@+id/buybutton"
            android:layout_width="88dp"
            android:layout_height="35dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="#3E9842"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remainingamount" />

        <Button
            android:id="@+id/Sellbutton"
            android:layout_width="88dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:background="#3E9842"
            android:textColor="@color/white"
            android:text="@string/sell"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remainingamount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>